--- a/index.html
+++ b/index.html
@@ -52,9 +52,12 @@
                 <div class="loading"></div>
             </div>
         </div>
+        <!-- <div class="playerfull" id="playerinfull">
+            <img src="" alt="">
+            <button id="close-btn" onclick="closeplayerinfo()">X</button>
+        </div> -->
     </main>
     <footer><b>&copy;</b> Copyright 2024 - Modraxis (aka <b>Basit</b>)</footer>
-
     <script type="text/javascript" src="./JS/ecpicon.js"></script>
     <script type="text/javascript" src="./JS/main.js"></script>
 </body>
