--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PDM Leaderboard</title>
-    <link rel="shortcut icon" type="image/png" href="./Images/icon.png">
+    <link rel="icon" type="image/png" href="https://officialtroller.github.io/src/img/logo_round.png" />
     <link rel="stylesheet" href="./CSS/fonts.css">
     <link rel="stylesheet" href="./CSS/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
